# shift_course

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
hw3_1/: log_parsing.py
notebooks/: hw2_db_creation_query.ipynb  hw3_2.ipynb
src/app/antifraud/: antifraud.md  antifraud.py
src/app/core/: api.py  calculator.py  core.ipynb  cut_test.csv  lgbm_cut.py  lightgbm_optuna_model_cut.pkl  model.py
src/app/modelling/ensembles/: CatBoost.py  XGBoost.py  comparison.py  lightGBM.py  lightGBM_no_fraud.py  random_forest.py  results.md
src/app/modelling/features/: application_train_test.py  bureau.py  bureau_balance.py  credit_card_balance.py  instalments_payments.py  previous_application.py
src/app/modelling/features_significances/: application.py  bureau.py  bureau_balance.py  credit_card_balance.py  installments_payments.py  previous_application.py
src/app/modelling/models/: decision_tree.py  log_reg.py  preprocessing.py  results.md
src/app/utils/: db_connector.py  stat_tests.py
src/config/: db_params.py  setup.cfg
tests/app/core/calculator/: calculator_test.py
