[tool.poetry]
name = "shift"
version = "0.1.0"
description = ""
authors = ["vvnva <vvivanova_10@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
psycopg2 = "^2.9.9"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
