[tool.poetry]
name = "shift"
version = "0.1.0"
description = ""
authors = ["vvnva <vvivanova_10@edu.hse.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
psycopg2 = "^2.9.9"
pandas = "^2.2.1"
optuna = "^3.6.1"
lightgbm = "^4.3.0"
catboost = "^1.2.3"
xgboost = "^2.0.3"
scikit-learn = "1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
